data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_309.wast
;; 10. **Complex Control Flow in Loop with Nop and Multiple br_if Statements**:    - Construct a loop with several `br_if` statements interspersed with `nop` instructions. This will verify if `wizard_engine` handles the context correctly without causing infinite loops due to misinterpretation of `nop`.    - Constraint: All `br_if` statements should be evaluated correctly, and `nop` should not cause infinite execution.

(assert_invalid
  (module
    (func (loop 
      (nop)
      (br_if 0 (i32.const 0))
      (nop)
      (br_if 0 (i32.const 1))
      (nop)
      (br_if 0 (i32.const 0))
      (nop)
      (br_if 0 (i32.const 1))
    ))
  )
  "invalid break condition"
)